# peering-manager

./: .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_ldap.txt  requirements_prometheus.txt  requirements_radius.txt  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---feature-request.md  ---housekeeping.md  bug_report.yml  config.yml  documentation.yml  documentation_change.yml  feature_request.yml  housekeeping.yml
.github/workflows/: ci.yml  stale.yml  testing.yml
Docker/: Dockerfile
bgp/: apps.py  enums.py  fields.py  filters.py  filtersets.py  forms.py  functions.py  models.py  tables.py  urls.py  views.py
bgp/api/: nested_serializers.py  serializers.py  urls.py  views.py
bgp/filtersets/: community.py  relationship.py  routing_policy.py
bgp/forms/: __init__.py  community.py  relationship.py  routing_policy.py
bgp/migrations/: 0001_initial.py  0002_models_normalisation.py  0003_move_community.py  0004_community_category_privacy.py  0005_move_routing_policy.py
bgp/models/: community.py  routing_policy.py
bgp/tables/: community.py  relationship.py  routing_policy.py
bgp/tests/: test_api.py  test_filters.py  test_filtersets.py  test_forms.py  test_models.py  test_views.py
bgp/views/: community.py  relationship.py  routing_policy.py
core/: apps.py  constants.py  data_backends.py  enums.py  exceptions.py  filtersets.py  jobs.py  scheduling.py  signals.py  system_jobs.py  urls.py  utils.py  views.py
core/api/: nested_serializers.py  schema.py  serializers.py  urls.py  views.py
core/filtersets/: change_logging.py  data.py  jobs.py  scheduled_tasks.py
core/forms/: change_logging.py  data.py  jobs.py  scheduled_tasks.py
core/migrations/: 0001_initial.py  0002_migrate_jobs.py  0003_job_created_auto_now.py  0004_datasource_and_datafile.py  0005_move_objectchange.py  0006_scheduled_tasks.py
core/models/: __init__.py  change_logging.py  data.py  jobs.py  scheduled_tasks.py
core/tables/: __init__.py  change_logging.py  data.py  jobs.py  scheduled_tasks.py  tasks.py
core/tests/: jobs_utils.py  test_api.py  test_filtersets.py  test_jobs.py  test_scheduled_tasks.py  test_views.py
core/views/: __init__.py  change_logging.py  data.py  jobs.py  scheduled_tasks.py  system.py  tasks.py
devices/: admin.py  apps.py  enums.py  filters.py  filtersets.py  forms.py  jobs.py  models.py  signals.py  tables.py  urls.py  views.py
devices/api/: nested_serializers.py  serializers.py  urls.py  views.py
devices/crypto/: __init__.py  arista.py  base.py  cisco.py  juniper.py  nokia.py
devices/migrations/: 0001_initial.py  0002_alter_platform_id.py  0003_configuration.py  0004_move_tags_to_extras.py  0005_models_normalisation.py  0006_configuration_sync_data.py  0007_move_router.py  0007_router.py  0008_router_communities.py  0009_router_unique_name.py  0010_move_community.py  0011_platform_arista_type7.py
devices/tests/: test_api.py  test_crypto.py  test_filters.py  test_filtersets.py  test_forms.py  test_models.py  test_views.py
devices/views/: __init__.py  configuration.py  platform.py  router.py
docker/: configuration.py  db.env  entrypoint.sh  web.env
docs/: ansible.md  config-template.md  container.md  getting-started.md  index.md  integration.md  introduction.md  man.md  requirements.txt  third-party.md  user-interface.md
docs/administration/: housekeeping.md  replication.md  system-jobs.md
docs/configuration/: date-time.md  development.md  index.md  miscellaneous.md  optional-settings.md  remote-authentication.md  required-parameters.md  required-settings.md  security.md  system.md  tools.md
docs/development/: getting-started.md  style-guide.md  (+1 more)
extras/: __init__.py  admin.py  apps.py  conditions.py  constants.py  context_managers.py  enums.py  filters.py  filtersets.py  forms.py  jobs.py  models.py  netbox.py  registry.py  signals.py  tables.py  urls.py  utils.py  views.py  webhooks.py  workers.py
messaging/: apps.py  filters.py  filtersets.py  forms.py  models.py  tables.py  urls.py  views.py
net/: admin.py  apps.py  constants.py  enums.py  fields.py  filters.py  filtersets.py  forms.py  models.py  tables.py  urls.py  views.py
netbox/: api.py  apps.py  tests.py
peering/: __init__.py  admin.py  apps.py  constants.py  enums.py  fields.py  filters.py  filtersets.py  formfields.py  forms.py  functions.py  jobs.py  models.py  peeringdb.py  signals.py  tables.py  tests.py  urls.py  views.py
peering_manager/: __init__.py  admin.py  api.py  asgi.py  configuration.example.py  constants.py  context.py  context_processors.py  enums.py  filtersets.py  forms.py  jobs.py  metrics.py  middleware.py  navigation.py  registry.py  releases.py  request_context.py  saml2_config.example.py  schema.py  settings.py  tests.py  urls.py  views.py  wsgi.py
peeringdb/: admin.py  api.py  apps.py  constants.py  enums.py  filters.py  filtersets.py  forms.py  functions.py  http.py  jobs.py  models.py  sync.py  tables.py  tests.py  urls.py  views.py
scripts/: cibuild.sh  migrate-from-sqlite.sh  requirements.sh  upgrade.sh
templates/: 403.html  404.html  500.html  _base-new.html  _base.html  _sidebar.html  home.html  search.html  setup.html
users/: admin.py  apps.py  filters.py  filtersets.py  forms.py  middleware.py  models.py  signals.py  tables.py  tests.py  token_actions.py  urls.py  views.py  views_permissions.py
utils/: admin.py  api.py  apps.py  constants.py  context_managers.py  context_processors.py  enums.py  exceptions.py  fields.py  filters.py  forms.py  functions.py  htmx.py  managers.py  middleware.py  migration.py  models.py  paginators.py  signals.py  tables.py  testing.py  tests.py  urls.py  validators.py  views.py
webhooks/: __init__.py  admin.py  constants.py  models.py  workers.py
(+1103 files in other folders)
