[project]
name = "peering-manager"
description = "BGP sessions management tool"
version = "1.10.4-dev"
authors = [{ name = "Guillaume Mazoyer", email = "pm@mazoyer.eu" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "django-debug-toolbar>=6.1,<6.2",
    "django-filter>=25.2,<25.3",
    "django-netfields>=1.3,<1.4",
    "django-prometheus>=2.4,<2.5",
    "django-redis>=6.0,<6.1",
    "django-rq>=3.2,<3.3",
    "django-tables2>=2.8,<2.9",
    "django-taggit>=6.1,<6.2",
    "drf-spectacular>=0.29,<0.30",
    "drf-spectacular-sidecar>=2025,<2026",
    "dulwich>=0.25,<0.26",
    "Jinja2>=3.1,<3.2",
    "Markdown>=3.10,<3.11",
    "napalm>=5.1,<5.2",
    "packaging==25.0",
    "psycopg[binary,pool]>=3.3,<3.4",
    "pyixapi>=0.2,<0.3",
    "pynetbox>=7.5,<7.6",
    "PyYAML>=6.0,<6.1",
    "requests>=2.32,<2.33",
    "social-auth-app-django>=5.7,<5.8",
]

[dependency-groups]
dev = ["pre-commit (>=4.2)", "ruff (>=0.12)", "coverage[toml] (>=7.10)"]
docs = ["mkdocs-material"]

[project.urls]
homepage = "https://peering-manager.net"
documentation = "https://docs.peering-manager.net"
repository = "https://github.com/peering-manager/peering-manager.git"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.uv]
package = false

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = [
    "C901",    # Is too complex
    "DJ001",   # Avoid using `null=True` on string-based fields such as `CharField`
    "E501",    # Line too long
    "F403",    # Unable to detect undefined names
    "F405",    # May be undefined, or defined from star imports
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "DJ",    # flake8-django
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort-like checks
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff specific rules
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "T10",   # flake8-debugger
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["B007", "N805", "N806", "N999"]
"peering_manager/configuration.example.py" = ["N999"]
"peering_manager/saml2_config.example.py" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "manage.py",
    "*/apps.py",
    "*/migrations/*",
    "peering_manager/asgi.py",
    "peering_manager/wsgi.py",
    "peering_manager/settings.py",
    "peering_manager/configuration.*",
]
